hard coded photo card container height to fix spacing

--- a/react-app/src/components/UserPage/index.css
+++ b/react-app/src/components/UserPage/index.css
@@ -431,6 +431,7 @@ padding-top: 0;
 .photo-show-card{
     width: fit-content;
     margin: 0;
+    height: 300px;
 }
 .photo-show-container{
     width: 95%;
